# yt-flaresolverr

./: README.md  pyproject.toml
.github/workflows/: release.yml
yt_dlp_plugins/postprocessor/yt_flaresolverr/: __init__.py
